--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
     <!-- who are we section -->
 
-    <section class="  d-md-flex ">
+    <section class="d-md-flex">
       <div class="p-4 col-md-6">
         <h1 class="text-center">Who are we?</h1>
-        <p class="" style="text-align: justify;">
+        <p class="" style="text-align: justify">
           At SugarB events, we believe that every event is unique and deserves
           meticulous attention to detail. Our experienced team of event planners
           is committed to understanding your vision, preferences, and
@@ -97,8 +97,33 @@
         </p>
       </div>
 
-      <div class="  d-flex justify-content-center align-items-center col-md-6">
-        <img src="./images/whoAreWe.png "/>
+      <div class="d-flex justify-content-center align-items-center col-md-6">
+        <img src="./images/whoAreWe.png " />
+      </div>
+    </section>
+
+    <!-- our services section-->
+
+    <section class="ourServices mt-4 py-4 d-flex flex-column justify-content-center align-items-center">
+      <h4 class="display-5 text-light" style="font-weight:500;">Our Services</h4>
+
+      <div class=" p-4 bg-light d-flex flex-column" style="width: 60vw;border-radius:10px">
+        <div class="d-flex align-items-center">
+          <h1 class="me-4 display-1">01</h1>
+          <div>
+            <h4>Event</h4>
+            <h4>Planning</h4>
+          </div>
+        </div>
+
+        <p>
+          We offer comprehensive event planning services, including venue
+          selection, vendor coordination, & customized event design. Whether
+          it's a small gathering or a large-scale conference, our event planning
+          services cover all aspects, from venue selection to audiovisual
+          production. We handle the technicalities, so you can focus on
+          delivering a successful event.
+        </p>
       </div>
     </section>
 
