reduse font size

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         >Setting the stage for Unforgettable celebrations</span
       >
 
-      <p class="text-center text-md-start">
+      <p class="text-center text-md-start" style="font-size: .9rem;">
         We ensure seamless execution, creating Unforgettable experiences for
         weddings, corporate events, and social gatherings.
       </p>
@@ -81,7 +81,7 @@
     <section class="d-md-flex">
       <div class="p-4 col-md-6">
         <h1 class="text-center">Who are we?</h1>
-        <p class="" style="text-align: justify">
+        <p class="" style="text-align: justify;font-size: .9rem;">
           At SugarB events, we believe that every event is unique and deserves
           meticulous attention to detail. Our experienced team of event planners
           is committed to understanding your vision, preferences, and
@@ -106,13 +106,13 @@
 
     <section class="ourServices mt-4 py-4 d-flex flex-column justify-content-center align-items-center">
       <h4 class="display-5 text-light" style="font-weight:500;">Our Services</h4>
-
-      <div class=" p-4 bg-light d-flex flex-column" style="width: 60vw;border-radius:10px">
+<div class="d-flex justify-content-center align-items-center">
+      <div class=" p-4 bg-light mx-2 d-flex flex-column" style="width: 80vw;border-radius:10px">
         <div class="d-flex align-items-center">
           <h1 class="me-4 display-1">01</h1>
           <div>
             <h4>Event</h4>
-            <h4>Planning</h4>
+            <h4 style="line-height:.3rem;">Planning</h4>
           </div>
         </div>
 
@@ -124,7 +124,10 @@
           production. We handle the technicalities, so you can focus on
           delivering a successful event.
         </p>
+
       </div>
+      <img src="./images/next.png" style="width: 30px; height: 30px;"/>
+    </div>
     </section>
 
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
