adjust font size

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="d-md-flex">
       <div class="p-4 col-md-6">
         <h1 class="text-center">Who are we?</h1>
-        <p class="" style="text-align: justify;font-size: .9rem;">
+        <p class="" style="text-align: justify;font-size: .8rem;">
           At SugarB events, we believe that every event is unique and deserves
           meticulous attention to detail. Our experienced team of event planners
           is committed to understanding your vision, preferences, and
@@ -107,7 +107,7 @@
     <section class="ourServices mt-4 py-4 d-flex flex-column justify-content-center align-items-center">
       <h4 class="display-5 text-light" style="font-weight:500;">Our Services</h4>
 <div class="d-flex justify-content-center align-items-center">
-      <div class=" p-4 bg-light mx-2 d-flex flex-column" style="width: 80vw;border-radius:10px">
+      <div class=" p-4 bg-light d-flex flex-column" style="width: 80vw;border-radius:10px">
         <div class="d-flex align-items-center">
           <h1 class="me-4 display-1">01</h1>
           <div>
@@ -116,7 +116,7 @@
           </div>
         </div>
 
-        <p>
+        <p style="font-size: .8rem;">
           We offer comprehensive event planning services, including venue
           selection, vendor coordination, & customized event design. Whether
           it's a small gathering or a large-scale conference, our event planning
@@ -126,7 +126,7 @@
         </p>
 
       </div>
-      <img src="./images/next.png" style="width: 30px; height: 30px;"/>
+      <img src="./images/next.png" style="width: 25px; height: 25px; margin-left: 9px;"/>
     </div>
     </section>
 
