edit our services section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <section class="ourServices mt-4 py-4 d-flex flex-column justify-content-center align-items-center">
       <h4 class="display-5 text-light" style="font-weight:500;">Our Services</h4>
-<div class="d-flex justify-content-center align-items-center">
+<!-- <div class="d-flex justify-content-center align-items-center">
       <div class=" p-4 bg-light d-flex flex-column" style="width: 80vw;border-radius:10px">
         <div class="d-flex align-items-center">
           <h1 class="me-4 display-1">01</h1>
@@ -127,9 +127,91 @@
 
       </div>
       <img src="./images/next.png" style="width: 25px; height: 25px; margin-left: 9px;"/>
+    </div> -->
+
+    <div class="w3-content w3-display-container">
+      <div class="mySlides">
+        <div class=" p-4 bg-light d-flex flex-column" style="width: 80vw;border-radius:10px">
+          <div class="d-flex align-items-center">
+            <h1 class="me-4 display-1">01</h1>
+            <div>
+              <h4>Event</h4>
+              <h4 style="line-height:.3rem;">Planning</h4>
+            </div>
+          </div>
+  
+          <p style="font-size: .8rem;">
+            We offer comprehensive event planning services, including venue
+            selection, vendor coordination, & customized event design. Whether
+            it's a small gathering or a large-scale conference, our event planning
+            services cover all aspects, from venue selection to audiovisual
+            production. We handle the technicalities, so you can focus on
+            delivering a successful event.
+          </p>
+  
+        </div>
+      </div>
+      <div class="mySlides">
+        <div class=" p-4 bg-light d-flex flex-column" style="width: 80vw;border-radius:10px">
+          <div class="d-flex align-items-center">
+            <h1 class="me-4 display-1">02</h1>
+            <div>
+              <h4>Event</h4>
+              <h4 style="line-height:.3rem;">Planning</h4>
+            </div>
+          </div>
+  
+          <p style="font-size: .8rem;">
+            We offer comprehensive event planning services, including venue
+            selection, vendor coordination, & customized event design. Whether
+            it's a small gathering or a large-scale conference, our event planning
+            services cover all aspects, from venue selection to audiovisual
+            production. We handle the technicalities, so you can focus on
+            delivering a successful event.
+          </p>
+  
+        </div>
+      </div>
+      <div class="mySlides">
+        <div class=" p-4 bg-light d-flex flex-column" style="width: 80vw;border-radius:10px">
+          <div class="d-flex align-items-center">
+            <h1 class="me-4 display-1">03</h1>
+            <div>
+              <h4>Event</h4>
+              <h4 style="line-height:.3rem;">Planning</h4>
+            </div>
+          </div>
+  
+          <p style="font-size: .8rem;">
+            We offer comprehensive event planning services, including venue
+            selection, vendor coordination, & customized event design. Whether
+            it's a small gathering or a large-scale conference, our event planning
+            services cover all aspects, from venue selection to audiovisual
+            production. We handle the technicalities, so you can focus on
+            delivering a successful event.
+          </p>
+  
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mt-2">
+      <button class=" me-2 " onclick="plusDivs(-1)">&#10094;</button>
+      <button class="" onclick="plusDivs(1)">&#10095;</button>
+
     </div>
+
+      
+    </div>
+
     </section>
 
+
+
+
+
+
+
+
+  
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
   </body>
