--- a/index.html
+++ b/index.html
@@ -157,17 +157,13 @@
             <h1 class="me-4 display-1">02</h1>
             <div>
               <h4>Event</h4>
-              <h4 style="line-height:.3rem;">Planning</h4>
+              <h4 style="line-height:.3rem;">Decoration</h4>
             </div>
           </div>
   
           <p style="font-size: .8rem;">
-            We offer comprehensive event planning services, including venue
-            selection, vendor coordination, & customized event design. Whether
-            it's a small gathering or a large-scale conference, our event planning
-            services cover all aspects, from venue selection to audiovisual
-            production. We handle the technicalities, so you can focus on
-            delivering a successful event.
+            We provide personalized event design consultations to understand your preferences and create a custom decor plan that brings your unique style and theme to life. You can choose from an extensive inventory of stylish props, backdrops, and lighting to transform any space into a dreamlike setting that perfectly reflects your vision.
+
           </p>
   
         </div>
@@ -194,8 +190,8 @@
         </div>
       </div>
       <div class="d-flex justify-content-center mt-2">
-      <button class=" me-2 " onclick="plusDivs(-1)">&#10094;</button>
-      <button class="" onclick="plusDivs(1)">&#10095;</button>
+      <button class="previousBtn me-2 " onclick="plusDivs(-1)">&#10094;</button>
+      <button class="nextBtn" onclick="plusDivs(1)">&#10095;</button>
 
     </div>
 
