add team section

--- a/index.html
+++ b/index.html
@@ -201,8 +201,100 @@
     </section>
 
 
+<!-- our events section starts here -->
+
+<section>
+  <h4 class="display-5 mt-2" style="font-weight:500; text-align: center;">Our Events</h4>
+<div  class="eventSection">
+
+  <div class="eventsContainer" style="background-image: url(./images/sliderImages/slider1.png);">
+    <h4>Khadijah & Malik</h4>
+    <h4>Wedding Dinner</h4>
+
+  </div>
 
 
+  <div class="eventsContainer" style="background-image: url(./images/sliderImages/slider5.jpg);" >
+    <h4>Khadijah & Malik</h4>
+    <h4>Wedding Dinner</h4>
+
+  </div>
+
+  <div class="eventsContainer" style="background-image: url(./images/sliderImages/slider4.jpg);">
+    <h4>Khadijah & Malik</h4>
+    <h4>Wedding Dinner</h4>
+
+  </div>
+
+  <div class="eventsContainer" style="background-image: url(./images/sliderImages/slider4.jpg);">
+    <h4>Khadijah & Malik</h4>
+    <h4>Wedding Dinner</h4>
+
+  </div>
+
+  <div class="eventsContainer" style="background-image: url(./images/sliderImages/slider3.jpg);">
+    <h4>Khadijah & Malik</h4>
+    <h4>Wedding Dinner</h4>
+
+  </div>
+
+  <div class="eventsContainer" style="background-image: url(./images/sliderImages/slider2.jpg);">
+    <h4>Khadijah & Malik</h4>
+    <h4>Wedding Dinner</h4>
+
+  </div>
+</div>
+</section>
+
+    
+
+<!-- our Team section starts here -->
+
+<section class="teamSection">
+  <h4 class="display-5 mt-2" style="font-weight:500; text-align: center;">Our Team</h4>
+
+<div class="container-fluid row justify-content-center">
+  <div class="teamContainer col-12 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
+  
+<img src="./images/teamOne.png" style="width: 60%;"/>
+<div style="text-align: center;">
+  <h5>Mrs Ahmed Igbayilola</h5>
+  <p>C.E.O</p>
+</div>
+  </div>
+
+
+  <div class="teamContainer col-12 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
+  
+    <img src="./images/teamOne.png" style="width: 60%;"/>
+    <div style="text-align: center;">
+      <h5>Mrs Ahmed Igbayilola</h5>
+      <p>C.E.O</p>
+    </div>
+      </div>
+
+
+      <div class="teamContainer col-12 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
+  
+        <img src="./images/teamOne.png" style="width: 60%;"/>
+        <div style="text-align: center;">
+          <h5>Mrs Ahmed Igbayilola</h5>
+          <p>C.E.O</p>
+        </div>
+          </div>
+
+
+
+          <div class="teamContainer col-12  col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center ">
+  
+            <img src="./images/teamOne.png" style="width: 60%;"/>
+            <div style="text-align: center;">
+              <h5>Mrs Ahmed Igbayilola</h5>
+              <p>C.E.O</p>
+            </div>
+              </div>
+    </div>
+</section>
 
 
 
