add why choose us section

--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@
 
 <!-- our Team section starts here -->
 
-<section class="teamSection">
+<section class="teamSection d-flex flex-column justify-content-center align-items-center">
   <h4 class="display-5 mt-2" style="font-weight:500; text-align: center;">Our Team</h4>
 
 <div class="container-fluid row justify-content-center">
-  <div class="teamContainer col-12 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
+  <div class="teamContainer col-7 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
   
 <img src="./images/teamOne.png" style="width: 60%;"/>
 <div style="text-align: center;">
@@ -264,7 +264,7 @@
   </div>
 
 
-  <div class="teamContainer col-12 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
+  <div class="teamContainer col-7 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
   
     <img src="./images/teamOne.png" style="width: 60%;"/>
     <div style="text-align: center;">
@@ -274,7 +274,7 @@
       </div>
 
 
-      <div class="teamContainer col-12 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
+      <div class="teamContainer col-7 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
   
         <img src="./images/teamOne.png" style="width: 60%;"/>
         <div style="text-align: center;">
@@ -285,7 +285,7 @@
 
 
 
-          <div class="teamContainer col-12  col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center ">
+          <div class="teamContainer col-7  col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center ">
   
             <img src="./images/teamOne.png" style="width: 60%;"/>
             <div style="text-align: center;">
@@ -296,6 +296,96 @@
     </div>
 </section>
 
+<!-- Why choose sugarB section -->
+<section class="my-4 container-fluid row d-flex justify-content-center">
+
+  <div class="col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
+    <img src="./images/icons/game-icons_stopwatch.png"/>
+    <h4 >Time and Stress Savings</h4>
+    <p style="text-align:justify">
+      Planning an event can be overwhelming 
+and time-consuming. You can delegate 
+the entire planning process to our team 
+of professionals, saving valuable time 
+and relieving yourself of the stress 
+associated with event coordination.
+    </p>
+  </div>
+
+
+  <div class="col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
+    <img src="./images/icons/ion_ribbon-sharp.png"/>
+    <h4 >Expertise and Experience</h4>
+    <p style="text-align:justify">
+      We bring a wealth of expertise and years
+      of experience to every event we handle. 
+     With our deep understanding of event 
+     logistics, industry trends, and best 
+     practices, we ensure a seamless planning
+      process and successful execution.
+    </p>
+  </div>
+
+
+  
+  <div class="col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
+    <img src="./images/icons/healthicons_magnifying-glass.png"/>
+    <h4 >Attention to Detail</h4>
+    <p style="text-align:justify">
+      We pride ourselves on our meticulous 
+      attention to detail. From venue selection 
+      and vendor coordination to logistics 
+      management and on-site execution, we 
+      ensure that every aspect of your event is 
+      flawlessly executed.
+    </p>
+  </div>
+
+
+   
+  <div class="col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
+    <img src="./images/icons/fa6-solid_handshake-angle.png"/>
+    <h4 >Vendor Connections</h4>
+    <p style="text-align:justify">
+      Our extensive network of trusted vendors 
+      enables us to connect you with the best 
+      professionals in the industry. We leverage
+      our connections  to secure competitive 
+      pricing and favorable terms without 
+      compromising on quality.
+    </p>
+  </div>
+
+
+    
+  <div class="col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
+    <img src="./images/icons/Vector.png"/>
+    <h4 >Innovative Solutions</h4>
+    <p style="text-align:justify">
+      We thrive on creativity and innovation, 
+      constantly seeking new ideas & trends to 
+      make your event unique. Our team of 
+      professionals will work with you to 
+      develop new concepts & design elements
+      to elevate your event to new heights.
+    </p>
+  </div>
+
+
+  <div class="col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
+    <img src="./images/icons/bx_support.png"/>
+    <h4 >Great Customer Service</h4>
+    <p style="text-align:justify">
+      Our commitment to exceptional customer 
+      service sets us apart. We prioritize open 
+      communication, attentive listening, and a 
+      personalized approach to ensure that your 
+      vision, preferences, and objectives are at 
+      the forefront of every decision we make. 
+    </p>
+  </div>
+
+</section>
 
 
 
