--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="d-flex justify-content-center align-items-center col-md-6">
-        <img src="./images/whoAreWe.png " />
+        <img src="./images/whoAreWe.png "  style="width: 80%;"/>
       </div>
     </section>
 
@@ -250,7 +250,7 @@
 
 <!-- our Team section starts here -->
 
-<section class="teamSection d-flex flex-column justify-content-center align-items-center">
+<section class="teamSection d-flex flex-column ">
   <h4 class="display-5 mt-2" style="font-weight:500; text-align: center;">Our Team</h4>
 
 <div class="container-fluid row justify-content-center">
