--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="d-flex justify-content-center align-items-center col-md-6">
-        <img src="./images/whoAreWe.png "  style="width: 80%;"/>
+        <img id="whoAreWeImg" src="./images/whoAreWe.png "/>
       </div>
     </section>
 
