add testimonial section for mobile

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
 
 <!-- Why choose sugarB section -->
 <section class="my-4 container-fluid row d-flex justify-content-center">
+  <h6 class="display-6 mt-2" style="font-weight:500; text-align: center;">Why Choose SugarB Events</h6>
 
   <div class="col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center text-center">
     <img src="./images/icons/game-icons_stopwatch.png"/>
@@ -387,8 +388,28 @@ associated with event coordination.
 
 </section>
 
+<!-- Testimonial section -->
 
 
+<section class="Testimonial py-2 px-4">
+  <h6 class="display-6 mt-2" style="font-weight:500; text-align: center;">Testimonials</h6>
+
+  <div class="bg-light d-flex flex-column justify-content-center align-items-center" style=" border-radius: 10px; padding-top: 100px;">
+<img src="./images/Ellipse 7.png" style=" transform: translateY(50%); width: 100px; height: 100px;"/>
+
+
+    <div style="background-color: #F693CC; border-radius: 10px;" class="px-4 pt-5 d-flex flex-column justify-content-center">
+      <h1>Balogun Aramide</h1>
+      <p>Absolutely amazing experience!
+        SugarB events made our dream 
+        wedding a reality. Every detail 
+        was flawlessly executed. We 
+        couldn't have asked for a better 
+        team to handle our special day!</p>
+    </div>
+  </div>
+  
+</section>
   
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
