finish footer for mobile

--- a/index.html
+++ b/index.html
@@ -410,6 +410,22 @@ associated with event coordination.
   </div>
   
 </section>
+
+
+<footer class="p-4 ">
+  <section class="d-flex justify-content-between">
+
+  <div><img class="socialMedia" src="./images/icons/instagram.png"/></div>
+  <div><img class="socialMedia" src="./images/icons/mail.png"/></div>
+  <div><img class="socialMedia" src="./images/icons/facebook.png"/></div>
+  <div><img class="socialMedia" src="./images/icons/whatsapp.png"/></div>
+  <div><img class="" src="./images/icons/twitter (1).png"/></div>
+
+</section>
+
+<p class="text-center my-4" style="color: #2A2A2A;">Copyright &copy; 2023 SugarB Events All rights reserved</p>
+
+</footer>
   
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
