management pictures change

--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 <div class="container-fluid row justify-content-center">
   <div class="teamContainer col-7 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
   
-<img src="./images/teamOne.png" style="width: 60%;"/>
+<img src="./images/Sugar.jpg" style="width: 60%;"/>
 <div style="text-align: center;">
-  <h5>Mrs Ahmed Igbayilola</h5>
+  <h5>Aminat Adeola Igbayilola</h5>
   <p>C.E.O</p>
 </div>
   </div>
@@ -266,10 +266,10 @@
 
   <div class="teamContainer col-7 col-sm-5 col-md-4 d-flex flex-column justify-content-center align-items-center">
   
-    <img src="./images/teamOne.png" style="width: 60%;"/>
+    <img src="./images/Ayomide.jpg" style="width: 60%;"/>
     <div style="text-align: center;">
-      <h5>Mrs Ahmed Igbayilola</h5>
-      <p>C.E.O</p>
+      <h5>Ayomide Oni</h5>
+      <p>Production Manager</p>
     </div>
       </div>
 
